B&L QA/objects/Evaluation_Tracking__c.object
<CustomObject>
    <description>Tack lenses billed to Surgeons against FOC Opportunities</description>
    <fields>
        <fullName>Allotted_Lenses__c</fullName>
        <label>Allotted Lenses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Lenses__c</fullName>
        <formula>Allotted_Lenses__c  -  Billed_Lenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Lenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billed_Lenses__c</fullName>
        <label>Billed Lenses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluation Trackings</relationshipLabel>
        <relationshipName>Evaluation_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Evaluation Trackings</relationshipLabel>
        <relationshipName>Evaluation_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>Trulign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <formula>Opportunity__r.Opp_Owner_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Evaluation Tracking</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Evaluation tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>